# tree_stump

./: .gitignore  Gemfile  README.md
.github/workflows/: rspec.yml
ext/tree_stump/: Cargo.toml
ext/tree_stump/src/: language.rs  lib.rs  parser.rs  query.rs  tree.rs  util.rs
lib/: tree_stump.rb
spec/: spec_helper.rb
spec/lib/: tree_stump_spec.rb
