[package]
name = "tree_stump"
version = "0.1.0"
edition = "2021"
authors = ["joker1007 <kakyoin.hierophant@gmail.com>"]
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.8.2" }
rb-sys = { version = "0.9.119", features = ["stable-api-compiled-fallback"] }
tree-sitter = "0.26"
tree-sitter-language = "0.1"
libloading = "~0.8.4"
streaming-iterator = "0.1"
